--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
-p{
-    background-image: url(./images/my-bg.png) ,url(./images/jhankar2.png);
-    background-repeat:no-repeat , no-repeat;
-    background-size: 200px;
-    background-position:60%, 30%, 40%,10% right center;
+body{
+    background-color: aquamarine;
+} 
+ .box{
+    width: 600px;
+    height: 400px;
+    border: 10px solid rgb(24, 19, 19);
+    background-image:  url(./images/my-bg.png);
+    background-repeat:no-repeat;
+    background-size:200px 200px;
+    background-position:center center;
+    background-attachment:scroll;
+    padding: 80px;
+    background-color: azure;
+    background-clip:;
+    
 }
