--- a/style.css
+++ b/style.css
@@ -1,17 +1,9 @@
-body{
-    background-color: aquamarine;
-} 
- .box{
-    width: 600px;
+.box{
+    width: 400px;
     height: 400px;
-    border: 10px solid rgb(24, 19, 19);
-    background-image:  url(./images/my-bg.png);
-    background-repeat:no-repeat;
-    background-size:200px 200px;
-    background-position:center center;
-    background-attachment:scroll;
-    padding: 80px;
-    background-color: azure;
-    background-clip:;
-    
+    border: 2px solid red;
+    background-image: linear-gradient(to left,red,blue),url(./images/jhankar2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: overlay;
 }
