--- a/style.css
+++ b/style.css
@@ -1,43 +1,25 @@
-div{
-    width: 100px;
-    height: 100px;
-    transition: all 2s ;
-    transition-timing-function:;
-  
-
-}
-.box1{
-    background-color: aqua;
-}
-.box1:active{
-    width: 300px;
-    background-color: blue;
-}
-.box2{
-    background-color: rgb(168, 168, 22);
-}
-.box2:hover{
-    width: 300px;
-    background-color: aqua;
-}
-.box3{
-    background-color: blue;
-}
-.box3:hover{
-    width: 300px;
-    background-color:rebeccapurple ;
-}
-.box4{
-    background-color: brown;
-}
-.box4:hover{
-    width: 300px;
-    background-color: black;
-}
-input{
-    width: 100px;
-    margin-top: 100px;
-}
-input:focus{
+.box{
     width: 200px;
+    height: 200px;
+    background-color: grey;
+    margin: 100px 0px 0px 100px;
+    perspective: 800px;
+    transform: rotatey(40deg);
+transform-style: preserve-3d;
+    
+    transform-origin: bottom;
+    
+}
+.pavel{
+    width: 200px;
+    height: 200px;
+    background-color: blue;
+    transform: rotateX(60deg);
+    transform-origin:top;
+    transition: 3s;
+    
+}
+.pavel:hover{
+    transform: rotatex(380deg);
+    
 }
