--- a/style.css
+++ b/style.css
@@ -5,33 +5,35 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    margin:-150px;
-    perspective: 600px;
-}
-.card:hover .content{
-    transform: rotateY(180deg);
+    margin: -150px;
+    perspective: 800px;
 }
 .content{
     width: 100%;
     height: 100%;
     position: absolute;
     transition: 2s;
+}
+.card:hover .content{
+    transform: rotateY(180deg);
     transform-style: preserve-3d;
+
 }
 .front,
 .back{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: rgb(136, 56, 56);
+    background-color: #fff;
     color: tomato;
-    font-size: 60px;
-    line-height: 300px;
     backface-visibility: hidden;
+    font-size: 60px;
+    text-align: center;
+    line-height: 300px;
 }
 .back{
     background-color: tomato;
     color: #fff;
     transform: rotateY(180deg);
-    backface-visibility: hidden;
+
 }
