--- a/style.css
+++ b/style.css
@@ -1,39 +1,22 @@
-.card{
-    width: 300px;
-    height: 300px;
-    border: 2px solid red;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -150px;
-    perspective: 800px;
+.box{
+    width: 400px;
+    height: 400px;
+    background-color: aqua;
+    margin-top: 200px;
+    position: relative;
 }
-.content{
-    width: 100%;
-    height: 100%;
+.box1{
+    width: 100px;
+    height: 100px;
+    background-color: blue;
     position: absolute;
-    transition: 2s;
-}
-.card:hover .content{
-    transform: rotateY(180deg);
-    transform-style: preserve-3d;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    
 
-}
-.front,
-.back{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: #fff;
-    color: tomato;
-    backface-visibility: hidden;
-    font-size: 60px;
-    text-align: center;
-    line-height: 300px;
-}
-.back{
-    background-color: tomato;
-    color: #fff;
-    transform: rotateY(180deg);
 
+    
 }
