--- a/style.css
+++ b/style.css
@@ -1,22 +1,17 @@
 .box{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     background-color: aqua;
-    margin-top: 200px;
-    position: relative;
 }
 .box1{
-    width: 100px;
-    height: 100px;
-    background-color: blue;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    
-
-
-    
+    width: 300px;
+    height: 300px;
+    background-color: rgb(132, 0, 255);
+    display: none;
+}
+.box2{
+    width: 300px;
+    height: 300px;
+    background-color: rgb(102, 255, 0);
+}
 }
