--- a/style.css
+++ b/style.css
@@ -1,31 +1,32 @@
-.card{
-    display: flex;
-    margin-left: 200px;
-    margin-top: 100px;
-}
-
 .container{
     width: 300px;
-    height: 300px;
-    background-color: gray;
-    
-    margin-left: 100px;
-    perspective:800px;
-    transform: rotateX(30deg);
-    background-image:url(./images/./my-bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.inner{
-    width: 100%;
-    height: 100%;
-    background-color:#37C3BE;
-    transform: rotateX(0deg);
-    transition: transform 2s;
-    transform-origin: top;
-    
+    height: 100px;
 
 }
-.inner:hover{
-transform: rotateX(180deg);
+.box1{
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
+    border: 2px solid royalblue;
+    margin-top:40px;
+    animation-name: simple;
+    animation-duration: 2s;
+    animation-delay: 0.1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    
+}
+@keyframes simple{
+    0%{width:0px;}
+    20%{
+        width: 300px;
+        background-color: blue;
+        border-radius: 50px;
+    }
+    50%{
+        width: 700px;
+        background-color: blueviolet;
+        height: 200px;
+    }
 }
