--- a/style.css
+++ b/style.css
@@ -1,32 +1,39 @@
-.container{
-    width: 300px;
-    height: 100px;
-
+.card{
+    display: flex;
 }
 .box1{
-    width: 100%;
-    height: 100%;
+    width:50%;
+    height: 400px;
     background-color: aqua;
-    border: 2px solid royalblue;
-    margin-top:40px;
-    animation-name: simple;
+    animation-name: simple1;
     animation-duration: 2s;
     animation-delay: 0.1s;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    
+    animation-iteration-count:inherit;
 }
-@keyframes simple{
-    0%{width:0px;}
-    20%{
-        width: 300px;
-        background-color: blue;
-        border-radius: 50px;
+@keyframes simple1{
+    0%{
+        transform: translateX(-150%);
     }
-    50%{
-        width: 700px;
-        background-color: blueviolet;
-        height: 200px;
+    100%{
+        transform: translateX(0);
     }
+
+}
+.box2{
+    width:50%;
+    height: 400px;
+    background-color: rgb(38, 0, 255);
+    animation-name: simple2;
+    animation-duration: 2s;
+    animation-delay: 0.1s;
+    animation-iteration-count: inherit;
+}
+@keyframes simple2{
+    0%{
+        transform: translateX(150%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+
 }
