--- a/style.css
+++ b/style.css
@@ -1,39 +1,21 @@
 .card{
-    display: flex;
+display: flex;
+margin: 300px;
+
 }
 .box1{
-    width:50%;
-    height: 400px;
-    background-color: aqua;
-    animation-name: simple1;
-    animation-duration: 2s;
-    animation-delay: 0.1s;
-    animation-iteration-count:inherit;
+width: 300px;
+height: 300px;
+margin-left: 70px;
+background-color: aqua;
+padding: 10px;
 }
-@keyframes simple1{
-    0%{
-        transform: translateX(-150%);
-    }
-    100%{
-        transform: translateX(0);
-    }
-
+.box1 img{
+    width: 100px;
 }
-.box2{
-    width:50%;
-    height: 400px;
-    background-color: rgb(38, 0, 255);
-    animation-name: simple2;
-    animation-duration: 2s;
-    animation-delay: 0.1s;
-    animation-iteration-count: inherit;
+.image{
+    margin-left: 100px;
 }
-@keyframes simple2{
-    0%{
-        transform: translateX(150%);
-    }
-    100%{
-        transform: translateX(0);
-    }
-
+.content{
+    text-align: center;
 }
