--- a/style.css
+++ b/style.css
@@ -1,21 +1,61 @@
-.card{
+.container{
 display: flex;
-margin: 300px;
-
+margin: 200px;
 }
 .box1{
-width: 300px;
-height: 300px;
-margin-left: 70px;
+margin-top: 100px;
+margin-right: 20px;
+
+
+
+
+}
+
+.card1{
+    width: 200px;
+height: 200px;
 background-color: aqua;
-padding: 10px;
+transform: scale(1);
+transition: transform 1s;
+
 }
-.box1 img{
-    width: 100px;
+.card1:hover{
+    transform: scale(1.3);
 }
-.image{
-    margin-left: 100px;
+.card2{
+    width: 200px;
+height: 200px;
+background-color: blueviolet;
+margin-top: 20px;
+transform: scale(1);
+transition: transform 1s;
 }
-.content{
-    text-align: center;
+.card2:hover{
+    transform: scale(1.3);
+}
+.box2{
+  
+    
+}
+.card3{
+    width: 200px;
+    height: 200px;
+    background-color: rgb(255, 0, 0);
+    transform: scale(1);
+transition: transform 1s;
+}
+.card3:hover{
+    transform: scale(1.3);
+}
+.card4{
+    width: 200px;
+    height: 200px;
+    background-color: rgb(0, 255, 191);
+    margin-top: 20px;
+    transform: scale(1);
+    transition: transform 1s;
+}
+.card4:hover{
+    transform: scale(1.3);
+    
 }
